--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="avaliacao.css">
         <link rel="stylesheet" href="escolha.css">
         <link rel="stylesheet" href="footer.css">
+        <link rel="stylesheet" href="css/import.css">
     <title>TechBoost Solutions</title>
 </head>
 <body>
